...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                <state key="normal" title="A FOOD TRUCK OWNER! 🚚">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                <state key="normal" title="A HUNGRY CUSTOMER 🌯">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nQk-YA-Yw8">
                                                                <rect key="frame" x="0.0" y="28.5" width="350" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="EmailTextField"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="width" constant="350" id="fir-AQ-OmO"/>
...
                                                        <rect key="frame" x="12" y="88.5" width="350" height="68.5"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cfx-55-7dd">
                                                                <rect key="frame" x="138" y="0.0" width="74" height="20.5"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="9iX-Pm-f11">
                                                                <rect key="frame" x="0.0" y="28.5" width="350" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="PasswordTextField"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="40" id="2Xx-FJ-BfT"/>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="VjO-A9-DML">
                                                                <rect key="frame" x="0.0" y="28.5" width="350" height="40"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="PasswordConfirmationTextField"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="width" constant="350" id="Akg-VJ-S4l"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                                <state key="normal" title="Create Account">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                <rect key="frame" x="20" y="280" width="374" height="110"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JuI-9D-Ucn">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                                        <constraints>
...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                                        <state key="normal" title="Sign In">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
