...
                        <connections>
                            <outlet property="dataSource" destination="jsl-A3-KUH" id="l59-4x-XCF"/>
                            <outlet property="delegate" destination="jsl-A3-KUH" id="ZTP-v6-Peq"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="SqA-ua-mnb">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="car" catalog="system" id="f5u-D3-up2">
                            <connections>
                                <action selector="profileButtonPressed:" destination="jsl-A3-KUH" id="HPj-DI-WZY"/>
                                <segue destination="h5I-Ob-cGp" kind="show" id="m32-hb-EM8"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            </objects>
            <point key="canvasLocation" x="986.95652173913049" y="137.94642857142856"/>
        </scene>
        <!--Profile-->
        <scene sceneID="ue8-kU-L6B">
            <objects>
                <tableViewController title="Profile" id="Eol-mm-Mvi" customClass="ProfileTableViewController" customModule="Food_Truck_TrackR" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="hoA-sv-Ecl">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" id="WCc-Kn-ZNk">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="125"/>
...
                            <constraint firstItem="5b1-5E-r8j" firstAttribute="trailing" secondItem="VSX-3s-U4G" secondAttribute="trailing" constant="40" id="uhx-fn-R6G"/>
                            <constraint firstItem="VIn-ko-3Jh" firstAttribute="top" secondItem="JRB-C8-TC1" secondAttribute="bottom" constant="8" id="xJk-ie-67e"/>
                            <constraint firstItem="lzF-zD-pXV" firstAttribute="leading" secondItem="5b1-5E-r8j" secondAttribute="leading" constant="8" id="yh5-tu-SlO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="5b1-5E-r8j"/>
                    </view>
                    <navigationItem key="navigationItem" title="Create a Truck" id="X88-7b-Jg8">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="82J-92-unX">
                            <connections>
                                <action selector="saveButton:" destination="Kt0-5N-HBK" id="2j3-3g-9lA"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
